fixing page jump and adding focus to searchbar after modal closes if string length is === 0

--- a/client/src/components/titlePage/TitleInfo/TitleInfo.module.scss
+++ b/client/src/components/titlePage/TitleInfo/TitleInfo.module.scss
@@ -36,7 +36,8 @@
       flex-direction: column;
       padding: 2rem;
       .poster_image {
-        height: auto;
+        // height: auto;
+        width: 250px;
       }
 
       .title_name {
